--- a/pom.xml
+++ b/pom.xml
@@ -60,18 +60,24 @@
 			<version>1.1.3</version>
 		</dependency>
 		
+        <!-- https://mvnrepository.com/artifact/org.springframework/spring-jdbc -->
+ 		<dependency>
+    		<groupId>org.springframework</groupId>
+    		<artifactId>spring-jdbc</artifactId>
+    		<version>3.0.4.RELEASE</version>
+		</dependency>
+		
 		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.6</version>
+		</dependency>
 
-            <groupId>javax.validation</groupId>
-            <artifactId>validation-api</artifactId>
-            <version>1.1.0.Final</version>
-        </dependency>
-        
-        <dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-validator</artifactId>
-            <version>5.1.0.Final</version>
-        </dependency>
+<!-- 		<dependency>
+    		<groupId>org.springframework</groupId>
+    		<artifactId>spring-oxm</artifactId>
+    		<version>3.0.4.RELEASE</version>
+		</dependency> -->
 		
 	</dependencies>
 	
