--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,12 @@
     		<version>3.0.4.RELEASE</version>
 		</dependency> -->
 		
+		<dependency>
+			<groupId>org.jsoup</groupId>
+			<artifactId>jsoup</artifactId>
+			<version>1.7.1</version>
+ 		</dependency>
+		
 	</dependencies>
 	
 	
